<resources>
    <string name="app_name">Daily Expenses</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="expenses">Expenses</string>
    <string name="date">Date</string>
    <string name="amount">Amount</string>
    <string name="category">Category</string>
    <string name="description">Description</string>
    <string name="spinner_text">Spinner Text</string>
    <string name="left_spinner">Left Spinner</string>
    <string name="right_spinner">Right Spinner</string>
    <string name="logout">Logout</string>
    <string name="email">Email</string>
    <string name="user_id">User Id</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="submit">Submit</string>
    <string name="enter_new_password">Enter New POassword</string>
    <string name="reset_password">Reset Password</string>
    <string name="add_expense">Add Expense</string>
    <string name="select_date">Select date</string>
    <string name="enter_amount">Enter amount</string>
    <string name="enter_category">Enter category</string>
    <string name="enter_description">Enter description</string>
    <string name="image">Image</string>
    <string name="save">Save</string>
    <string name="continew">Continue</string>
    <string name="select_image">Select Image</string>
    <string name="other">Other</string>
    <string name="gift">Gift</string>
    <string name="education">Education</string>
    <string name="health">Health</string>
    <string name="grooming">Grooming</string>
    <string name="apparel">Apparel</string>
    <string name="stationary">Stationary</string>
    <string name="recharge">Recharge</string>
    <string name="travel">Travel</string>
    <string name="food">Food</string>
    <string name="enlarged_image">Enlarged image</string>
    <string name="daily_expense">Daily Expense</string>
    <string name="statistics">Statistics</string>
    <string name="profile">Profile</string>
    <string name="nothing">Nothing</string>
    <string name="sync_data">Sync Data</string>
</resources>