<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageButton
        android:id="@+id/spinLeft"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:src="@drawable/left_arrow"
        android:layout_marginTop="2dp"
        android:background="@android:color/transparent"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/left_spinner" />

    <TextView
        android:id="@+id/spinText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/spinner_text"
        android:textSize="22sp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"/>


    <ImageButton
        android:id="@+id/spinRight"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:src="@drawable/right_arrow"
        android:background="@android:color/transparent"
        android:layout_marginTop="2dp"
        android:contentDescription="@string/right_spinner" />

</LinearLayout>