<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_login"
    tools:context=".ForgotPassword">

    <ImageView
        android:id="@+id/image_logo"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/app_icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="100dp" />

    <TextView
        android:id="@+id/text_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/forgot_password"
        android:textSize="24sp"
        android:textColor="@android:color/black"
        android:layout_below="@id/image_logo"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp" />

    <!-- Email EditText -->
    <EditText
        android:id="@+id/edit_email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@id/text_title"
        android:hint="@string/email"
        android:backgroundTint="@android:color/white"
        android:background="@drawable/edittext_background"
        android:textColor="@android:color/black"
        android:layout_marginTop="32dp" />

    <!-- Reset Password Button -->
    <Button
        android:id="@+id/button_reset_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/reset_password"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background" />

    <!-- New Password EditText -->
    <EditText
        android:id="@+id/edit_new_password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:layout_below="@id/button_reset_password"
        android:hint="@string/enter_new_password"
        android:backgroundTint="@android:color/white"
        android:textColor="@android:color/black"
        android:background="@drawable/edittext_background"
        android:visibility="gone"
        android:layout_marginTop="32dp" />

    <!-- Final Submit Button -->
    <Button
        android:id="@+id/button_submit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_new_password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:text="@string/submit"
        android:textColor="@android:color/white"
        android:background="@drawable/button_background"
        android:visibility="gone" />


</RelativeLayout>