<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="4dp"
    android:padding="5dp">

    <TextView
        android:id="@+id/recycle_category"
        android:layout_width="105dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/category"
        android:textSize="18sp"
        android:textColor="#575757"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="start" />

    <TextView
        android:id="@+id/recycle_description"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:paddingStart="3dp"
        android:paddingEnd="3dp"
        android:ellipsize="marquee"
        android:maxLines="2"
        android:text="@string/description"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/recycle_amount_daily"
        app:layout_constraintStart_toEndOf="@+id/recycle_category"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/recycle_amount_daily"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="3dp"
        android:text="@string/amount"
        android:textColor="@color/red"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="end"/>

</androidx.constraintlayout.widget.ConstraintLayout>